--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "0.4.2",
+    "@tailwindcss/typography": "0.5.7",
     "autoprefixer": "10.4.12",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
